--- a/Basics/index.html
+++ b/Basics/index.html
@@ -11,8 +11,10 @@
     <button id = "two" onclick="two()" class="btn btn-success">Age in Days</button>
     
     </div>
-    <div id="content" class = "text-center" style="margin-top: 70px;" >
+    <div class = "text-center" style="margin-top: 70px;" >
         <h1 id="title"></h1>
+        <div id="content" class = "text-center" style="margin-top: 70px;" >
+        </div>
     </div>
     
 
